--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
             <li><%= link_to "Company", "/companies" %></li>
             <li><%= link_to "Candidate Recruiters", "/candidate_recruiters" %></li>
             <li><%= link_to "Candidate Jobs", "/candidate_jobs" %></li>
+            <li><%= link_to "Sign In", "/sessions/new" %></li>
             <li><a href="#about">About</a></li>
           </ul>
         </div>
@@ -36,7 +37,11 @@
     </div>
   </div>
 
-  <div class="container">
+<div class="container">
+
+  <% if session[:user_id].present? %>
+    <p>Welcome back, <%= User.find(session[:user_id]).email %> | <%= link_to "Sign Out", '/sessions', method: 'delete' %></p>
+  <% end %>
 
     <% if flash[:notice] %>
     <div class="alert alert-success">
