Changed menus and dropped CandidateCompanies table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,17 @@
           <ul class="nav">
 
             <li><%= link_to "Home", "/" %></li>
+            <li><%= link_to "myJobs", "#" %></li>
+            <li><%= link_to "Calendar", "#" %></li>
             <li><%= link_to "Candidates", "/candidates" %></li>
-            <li><%= link_to "Notes", "/notes" %></li>
+            <li><%= link_to "Clients", "/clients" %></li>
             <li><%= link_to "Jobs", "/jobs" %></li>
+            <li><%= link_to "Notes", "/notes" %></li>
             <li><%= link_to "Company", "/companies" %></li>
             <li><%= link_to "Candidate Recruiters", "/candidate_recruiters" %></li>
             <li><%= link_to "Candidate Jobs", "/candidate_jobs" %></li>
             <li><%= link_to "Sign In", "/sessions/new" %></li>
+            <li><%= link_to "Log out", "#" %></li>
             <li><a href="#about">About</a></li>
           </ul>
         </div>
