--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,13 @@
             <li><%= link_to "Clients", "/clients" %></li>
             <li><%= link_to "Jobs", "/jobs" %></li>
             <li><%= link_to "Notes", "/notes" %></li>
-            <li><%= link_to "Company", "/companies" %></li>
-            <li><%= link_to "Candidate Recruiters", "/candidate_recruiters" %></li>
             <li><%= link_to "Candidate Jobs", "/candidate_jobs" %></li>
-            <li><%= link_to "Sign In", "/sessions/new" %></li>
-            <li><%= link_to "Log out", "#" %></li>
-            <li><a href="#about">About</a></li>
+            <% if signed_in? %>
+            <li><%= link_to "Sign Out", signout_url, method: 'delete' %></li>
+            <% else %>
+              <li><%= link_to "Sign In", signin_url %></li>
+              <li><%= link_to "Sign Up", new_user_url %></li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -47,7 +48,7 @@
     <p>Welcome back, <%= User.find(session[:user_id]).email %> | <%= link_to "Sign Out", '/sessions', method: 'delete' %></p>
   <% end %>
 
-    <% if flash[:notice] %>
+    <% if notice.present? %>
     <div class="alert alert-success">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       <%= notice %>
