--- a/app/views/agency_clients/show.html.erb
+++ b/app/views/agency_clients/show.html.erb
@@ -1,11 +1,11 @@
 <p>
   <b>Agency:</b>
-  <%= @agency_client.agency_id %>
+  <%= @agency_client.agency.name %>
 </p>
 
 <p>
   <b>Client:</b>
-  <%= @agency_client.client_id %>
+  <%= @agency_client.client.name %>
 </p>
 
 
