--- a/app/views/candidate_jobs/show.html.erb
+++ b/app/views/candidate_jobs/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @candidate_job.candidate_id %>
+  <%= @candidate_job.candidate.full_name %>
 </p>
 
 <p>
   <b>Job:</b>
-  <%= @candidate_job.job_id %>
+  <%= @candidate_job.job.title %>
 </p>
 
 
