--- a/app/views/candidate_recruiters/show.html.erb
+++ b/app/views/candidate_recruiters/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @candidate_recruiter.candidate_id %>
+  <%= @candidate_recruiter.candidate.full_name %>
 </p>
 
 <p>
   <b>Recruiters:</b>
-  <%= @candidate_recruiter.recruiters_id %>
+  <%= @candidate_recruiter.recruiter.full_name %>
 </p>
 
 
