--- a/app/views/agency_clients/index.html.erb
+++ b/app/views/agency_clients/index.html.erb
@@ -11,8 +11,8 @@
 
 <% @agency_clients.each do |agency_client| %>
   <tr>
-    <td><%= agency_client.agency_id %></td>
-    <td><%= agency_client.client_id %></td>
+    <td><%= agency_client.agency.name %></td>
+    <td><%= agency_client.client.name %></td>
     <td><%= link_to 'Show', agency_client %></td>
     <td><%= link_to 'Edit', edit_agency_client_path(agency_client) %></td>
     <td><%= link_to 'Destroy', agency_client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
