--- a/app/views/candidate_jobs/new.html.erb
+++ b/app/views/candidate_jobs/new.html.erb
@@ -1,21 +1,3 @@
 <h1>New Candidate Job</h1>
 
-
-<%= form_tag(candidate_jobs_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :candidate_id %><br />
-    <%= number_field_tag :candidate_id %>
-  </div>
-
-    <div>
-    <%= label_tag :job_id %><br />
-    <%= number_field_tag :job_id %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Candidate Job" %>
-  </div>
-<% end %>
+<%= render 'form' %>
