--- a/app/views/candidate_recruiters/edit.html.erb
+++ b/app/views/candidate_recruiters/edit.html.erb
@@ -1,21 +1,3 @@
 <h1>Editing Candidate Recruiter #<%= @candidate_recruiter.id %></h1>
 
-
-<%= form_tag(candidate_recruiter_url(@candidate_recruiter), method: 'put') do %>
-
-  <div>
-    <%= label_tag :candidate_id %><br />
-    <%= number_field_tag :candidate_id, @candidate_recruiter.candidate_id %>
-  </div>
-
-  <div>
-    <%= label_tag :recruiters_id %><br />
-    <%= number_field_tag :recruiters_id, @candidate_recruiter.recruiters_id %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Update Candidate Recruiter" %>
-  </div>
-
-<% end %>
+<%= render 'form' %>
