--- a/app/views/candidate_recruiters/index.html.erb
+++ b/app/views/candidate_recruiters/index.html.erb
@@ -16,9 +16,9 @@
   <tbody>
   <% @candidate_recruiters.each do |candidate_recruiter| %>
     <tr>
-      <td><%= candidate_recruiter.candidate_id %></td>
-      <td><%= candidate_recruiter.recruiters_id %></td>
-  
+      <td><%= candidate_recruiter.candidate.try(:full_name) %></td>
+      <td><%= candidate_recruiter.recruiter.try(:first_name) %></td>
+
       <td><%= link_to 'Show', candidate_recruiter_url(candidate_recruiter) %></td>
       <td><%= link_to 'Edit', edit_candidate_recruiter_url(candidate_recruiter) %></td>
       <td><%= link_to 'Destroy', candidate_recruiter_url(candidate_recruiter), method: 'delete', data: { confirm: "Do you really want to delete this candidate_recruiter?" } %></td>
