--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,51 +1,3 @@
 <h1>New Candidate</h1>
 
-
-<%= form_tag(candidates_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :first_name %><br />
-    <%= text_field_tag :first_name %>
-  </div>
-
-    <div>
-    <%= label_tag :last_name %><br />
-    <%= text_field_tag :last_name %>
-  </div>
-
-    <div>
-    <%= label_tag :title %><br />
-    <%= text_field_tag :title %>
-  </div>
-
-    <div>
-    <%= label_tag :industry %><br />
-    <%= text_field_tag :industry %>
-  </div>
-
-    <div>
-    <%= label_tag :years_experience %><br />
-    <%= number_field_tag :years_experience %>
-  </div>
-
-    <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email %>
-  </div>
-
-    <div>
-    <%= label_tag :bio %><br />
-    <%= text_area_tag :bio %>
-  </div>
-
-    <div>
-    <%= label_tag :company_id %><br />
-    <%= number_field_tag :company_id %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Candidate" %>
-  </div>
-<% end %>
+<%= render 'form' %>
