Added migration to change column from recruiters_id to recruiter_id in CandidateRecruiter table.

--- a/app/views/candidate_recruiters/_form.html.erb
+++ b/app/views/candidate_recruiters/_form.html.erb
@@ -7,7 +7,7 @@
 
   <div>
     <%= f.label :recruiters_id %><br />
-    <%= f.collection_select :recruiters_id, Recruiter.all, :id, :full_name %>
+    <%= f.collection_select :recruiter_id, Recruiter.all, :id, :full_name %>
   </div>
 
 
