--- a/app/views/client_jobs/show.html.erb
+++ b/app/views/client_jobs/show.html.erb
@@ -1,11 +1,11 @@
 <p>
   <b>Client:</b>
-  <%= @client_job.client_id %>
+  <%= @client_job.client.name %>
 </p>
 
 <p>
   <b>Job:</b>
-  <%= @client_job.job_id %>
+  <%= @client_job.job.title %>
 </p>
 
 
