--- a/app/views/hiring_manager_jobs/show.html.erb
+++ b/app/views/hiring_manager_jobs/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Hiring manager:</b>
-  <%= @hiring_manager_job.hiring_manager_id %>
+  <%= @hiring_manager_job.hiring_manager.full_name %>
 </p>
 
 <p>
   <b>Job:</b>
-  <%= @hiring_manager_job.job_id %>
+  <%= @hiring_manager_job.job.title %>
 </p>
 
 
