--- a/app/views/hiring_manager_notes/show.html.erb
+++ b/app/views/hiring_manager_notes/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @hiring_manager_note.candidate_id %>
+  <%= @hiring_manager_note.candidate.full_name %>
 </p>
 
 <p>
   <b>Note:</b>
-  <%= @hiring_manager_note.note_id %>
+  <%= @hiring_manager_note.note.description %>
 </p>
 
 <p>
   <b>Hiring manager:</b>
-  <%= @hiring_manager_note.hiring_manager_id %>
+  <%= @hiring_manager_note.hiring_manager.full_name %>
 </p>
 
 
