--- a/app/views/client_jobs/_form.html.erb
+++ b/app/views/client_jobs/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :client_id %><br />
-    <%= f.number_field :client_id %>
+    <%= f.collection_select :client_id, Client.all, :id, :name %>
   </div>
   <div class="field">
     <%= f.label :job_id %><br />
-    <%= f.number_field :job_id %>
+    <%= f.collection_select :job_id, Job.all, :id, :title %>
   </div>
   <div class="actions">
     <%= f.submit %>
