--- a/app/views/recruiter_notes/show.html.erb
+++ b/app/views/recruiter_notes/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @recruiter_note.candidate_id %>
+  <%= @recruiter_note.candidate.full_name %>
 </p>
 
 <p>
   <b>Note:</b>
-  <%= @recruiter_note.note_id %>
+  <%= @recruiter_note.note.description %>
 </p>
 
 <p>
   <b>Recruiter:</b>
-  <%= @recruiter_note.recruiter_id %>
+  <%= @recruiter_note.recruiter.full_name %>
 </p>
 
 
