--- a/app/views/hiring_managers/edit.html.erb
+++ b/app/views/hiring_managers/edit.html.erb
@@ -1,36 +1,7 @@
 <h1>Editing Hiring Manager #<%= @hiring_manager.id %></h1>
 
+<%= render 'form' %>
 
-<%= form_tag(hiring_manager_url(@hiring_manager), method: 'put') do %>
+<%= link_to 'Show', @hiring_manager %> |
+<%= link_to 'Back', hiring_managers_path %>
 
-  <div>
-    <%= label_tag :first_name %><br />
-    <%= text_field_tag :first_name, @hiring_manager.first_name %>
-  </div>
-
-  <div>
-    <%= label_tag :last_name %><br />
-    <%= text_field_tag :last_name, @hiring_manager.last_name %>
-  </div>
-
-  <div>
-    <%= label_tag :title %><br />
-    <%= text_field_tag :title, @hiring_manager.title %>
-  </div>
-
-  <div>
-    <%= label_tag :company_id %><br />
-    <%= number_field_tag :company_id, @hiring_manager.company_id %>
-  </div>
-
-  <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email, @hiring_manager.email %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Update Hiring Manager" %>
-  </div>
-
-<% end %>
