--- a/app/views/hiring_managers/new.html.erb
+++ b/app/views/hiring_managers/new.html.erb
@@ -1,36 +1,6 @@
 <h1>New Hiring Manager</h1>
 
+<%= render 'form' %>
 
-<%= form_tag(hiring_managers_url, method: 'post') do %>
+<%= link_to 'Back', hiring_managers_path %>
 
-
-  <div>
-    <%= label_tag :first_name %><br />
-    <%= text_field_tag :first_name %>
-  </div>
-
-    <div>
-    <%= label_tag :last_name %><br />
-    <%= text_field_tag :last_name %>
-  </div>
-
-    <div>
-    <%= label_tag :title %><br />
-    <%= text_field_tag :title %>
-  </div>
-
-    <div>
-    <%= label_tag :company_id %><br />
-    <%= number_field_tag :company_id %>
-  </div>
-
-    <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Hiring Manager" %>
-  </div>
-<% end %>
