--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,36 +1,6 @@
 <h1>New Job</h1>
 
+<%= render 'form' %>
 
-<%= form_tag(jobs_url, method: 'post') do %>
+<%= link_to 'Back', jobs_path %>
 
-
-  <div>
-    <%= label_tag :title %><br />
-    <%= text_field_tag :title %>
-  </div>
-
-    <div>
-    <%= label_tag :description %><br />
-    <%= text_field_tag :description %>
-  </div>
-
-    <div>
-    <%= label_tag :location %><br />
-    <%= text_field_tag :location %>
-  </div>
-
-    <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email %>
-  </div>
-
-    <div>
-    <%= label_tag :url %><br />
-    <%= text_field_tag :url %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Job" %>
-  </div>
-<% end %>
