--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,26 +1,7 @@
 <h1>Editing Note #<%= @note.id %></h1>
 
+<%= render 'form' %>
 
-<%= form_tag(note_url(@note), method: 'put') do %>
+<%= link_to 'Show', @note %> |
+<%= link_to 'Back', notes_path %>
 
-  <div>
-    <%= label_tag :description %><br />
-    <%= text_field_tag :description, @note.description %>
-  </div>
-
-  <div>
-    <%= label_tag :date %><br />
-    <%= text_field_tag :date, @note.date %>
-  </div>
-
-  <div>
-    <%= label_tag :job_id %><br />
-    <%= number_field_tag :job_id, @note.job_id %>
-  </div>
-
-
-  <div>
-    <%= submit_tag "Update Note" %>
-  </div>
-
-<% end %>
