--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,26 +1,7 @@
 <h1>New Note</h1>
 
+<%= render 'form' %>
 
-<%= form_tag(notes_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :description %><br />
-    <%= text_field_tag :description %>
-  </div>
-
-    <div>
-    <%= label_tag :date %><br />
-    <%= text_field_tag :date %>
-  </div>
-
-    <div>
-    <%= label_tag :job_id %><br />
-    <%= number_field_tag :job_id %>
-  </div>
+<%= link_to 'Back', notes_path %>
 
 
-  <div>
-    <%= submit_tag "Create Note" %>
-  </div>
-<% end %>
