--- a/app/views/recruiters/new.html.erb
+++ b/app/views/recruiters/new.html.erb
@@ -1,36 +1,5 @@
 <h1>New Recruiter</h1>
 
+<%= render 'form' %>
 
-<%= form_tag(recruiters_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :first_name %><br />
-    <%= text_field_tag :first_name %>
-  </div>
-
-    <div>
-    <%= label_tag :last_name %><br />
-    <%= text_field_tag :last_name %>
-  </div>
-
-    <div>
-    <%= label_tag :title %><br />
-    <%= text_field_tag :title %>
-  </div>
-
-    <div>
-    <%= label_tag :company_id %><br />
-    <%= number_field_tag :company_id %>
-  </div>
-
-    <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Recruiter" %>
-  </div>
-<% end %>
+<%= link_to 'Back', recruiters_path %>
