Updated seeds file with candidate_job, candidate_recruiter & client_job data

--- a/app/views/candidate_recruiters/index.html.erb
+++ b/app/views/candidate_recruiters/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Candidate</th>
-      <th>Recruiters</th>
+      <th>Recruiter</th>
       <th></th>
       <th></th>
       <th></th>
