Changed candidate_jobs index

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,13 @@
-<h1>Candidate #<%= @candidate.id %></h1>
+
+
+  <b>First name:</b>
+  <%= @candidate.first_name %>
+
+
+
+  <b>Last name:</b>
+  <%= @candidate.last_name %>
+
 
 <p>
   <b>Title:</b>
