--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -10,6 +10,7 @@
       <th>Location</th>
       <th>Email</th>
       <th>Url</th>
+      <th>Candidates</th>
       <th></th>
       <th></th>
       <th></th>
@@ -24,7 +25,8 @@
       <td><%= job.location %></td>
       <td><%= job.email %></td>
       <td><%= job.url %></td>
-  
+      <td><%= link_to job.candidates.size, candidate_jobs_url(job) %></td>
+
       <td><%= link_to 'Show', job_url(job) %></td>
       <td><%= link_to 'Edit', edit_job_url(job) %></td>
       <td><%= link_to 'Destroy', job_url(job), method: 'delete', data: { confirm: "Do you really want to delete this job?" } %></td>
