--- a/app/views/recruiters/_form.html.erb
+++ b/app/views/recruiters/_form.html.erb
@@ -1,5 +1,17 @@
 <%= form_for @recruiter do |f| %>
 
+<% if @recruiter.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@recruiter.errors.count, "error") %> prohibited this recruiter from signing in:</h2>
+
+    <ul>
+    <% @recruiter.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
   <div>
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
