Added and/or confirmed correctness of error fields in views.

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,16 +1,3 @@
 <h1>Editing Company #<%= @company.id %></h1>
 
-
-<%= form_tag(company_url(@company), method: 'put') do %>
-
-  <div>
-    <%= label_tag :name %><br />
-    <%= text_field_tag :name, @company.name %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Update Company" %>
-  </div>
-
-<% end %>
+<%= render 'form' %>
