--- a/app/views/hiring_manager_notes/index.html.erb
+++ b/app/views/hiring_manager_notes/index.html.erb
@@ -17,9 +17,9 @@
   <tbody>
   <% @hiring_manager_notes.each do |hiring_manager_note| %>
     <tr>
-      <td><%= hiring_manager_note.candidate.full_name %></td>
+      <td><%= hiring_manager_note.candidate.user.full_name %></td>
       <td><%= hiring_manager_note.note.description %></td>
-      <td><%= hiring_manager_note.hiring_manager.full_name %></td>
+      <td><%= hiring_manager_note.hiring_manager.user.full_name %></td>
 
       <td><%= link_to 'Show', hiring_manager_note_url(hiring_manager_note) %></td>
       <td><%= link_to 'Edit', edit_hiring_manager_note_url(hiring_manager_note) %></td>
