--- a/app/views/hiring_managers/show.html.erb
+++ b/app/views/hiring_managers/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>First name:</b>
-  <%= @hiring_manager.first_name %>
+  <%= @hiring_manager.user.first_name %>
 </p>
 
 <p>
   <b>Last name:</b>
-  <%= @hiring_manager.last_name %>
+  <%= @hiring_manager.user.last_name %>
 </p>
 
 <p>
