--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,16 +1,3 @@
 <h1>New Company</h1>
 
-
-<%= form_tag(companies_url, method: 'post') do %>
-
-
-  <div>
-    <%= label_tag :name %><br />
-    <%= text_field_tag :name %>
-  </div>
-
-  
-  <div>
-    <%= submit_tag "Create Company" %>
-  </div>
-<% end %>
+<%= render 'form' %>
