--- a/app/views/hiring_manager_jobs/index.html.erb
+++ b/app/views/hiring_manager_jobs/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
   <% @hiring_manager_jobs.each do |hiring_manager_job| %>
     <tr>
-      <td><%= hiring_manager_job.hiring_manager.full_name %></td>
+      <td><%= hiring_manager_job.hiring_manager.user.full_name %></td>
       <td><%= hiring_manager_job.job.title %></td>
 
       <td><%= link_to 'Show', hiring_manager_job_url(hiring_manager_job) %></td>
