Fixed full_name calls for Candidate, Hiringmanager and Recruiter drop-downs.

--- a/app/views/candidate_recruiters/show.html.erb
+++ b/app/views/candidate_recruiters/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @candidate_recruiter.candidate.full_name %>
+  <%= @candidate_recruiter.candidate.user.full_name %>
 </p>
 
 <p>
   <b>Recruiters:</b>
-  <%= @candidate_recruiter.recruiter.full_name %>
+  <%= @candidate_recruiter.recruiter.user.full_name %>
 </p>
 
 
