--- a/app/views/external_jobs/show.html.erb
+++ b/app/views/external_jobs/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <b>Hiring manager:</b>
-  <%= @external_job.hiring_manager.full_name %>
+  <%= @external_job.hiring_manager.user.full_name %>
 </p>
 
 <p>
