--- a/app/views/hiring_manager_jobs/show.html.erb
+++ b/app/views/hiring_manager_jobs/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Hiring manager:</b>
-  <%= @hiring_manager_job.hiring_manager.full_name %>
+  <%= @hiring_manager_job.hiring_manager.user.full_name %>
 </p>
 
 <p>
