--- a/app/views/hiring_manager_notes/show.html.erb
+++ b/app/views/hiring_manager_notes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @hiring_manager_note.candidate.full_name %>
+  <%= @hiring_manager_note.candidate.user.full_name %>
 </p>
 
 <p>
@@ -12,7 +12,7 @@
 
 <p>
   <b>Hiring manager:</b>
-  <%= @hiring_manager_note.hiring_manager.full_name %>
+  <%= @hiring_manager_note.hiring_manager.user.full_name %>
 </p>
 
 
