--- a/app/views/recruiter_notes/show.html.erb
+++ b/app/views/recruiter_notes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Candidate:</b>
-  <%= @recruiter_note.candidate.full_name %>
+  <%= @recruiter_note.candidate.user.full_name %>
 </p>
 
 <p>
@@ -12,7 +12,7 @@
 
 <p>
   <b>Recruiter:</b>
-  <%= @recruiter_note.recruiter.full_name %>
+  <%= @recruiter_note.recruiter.user.full_name %>
 </p>
 
 
