Update nav menu to use dynamic routes, fixed candidate_job form error. myJob versus job index.

--- a/app/views/candidate_jobs/_form.html.erb
+++ b/app/views/candidate_jobs/_form.html.erb
@@ -10,7 +10,7 @@
 
   <div>
     <%= f.label :candidate_id %><br />
-    <%= f.collection_select :candidate_id, Candidate.all.user, :id, :first_name %>
+    <%= f.collection_select :candidate_id, Candidate.all , :id, :full_name %>
   </div>
 
   <div>
