--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,13 @@
           <ul class="nav">
 
             <li><%= link_to "Home", "/" %></li>
-            <li><%= link_to "myJobs", "#" %></li>
+            <li><%= link_to "myJobs", jobs_url %></li>
             <li><%= link_to "Calendar", "#" %></li>
-            <li><%= link_to "Candidates", "/candidates" %></li>
-            <li><%= link_to "Clients", "/clients" %></li>
-            <li><%= link_to "Jobs", "/jobs" %></li>
-            <li><%= link_to "Notes", "/notes" %></li>
-            <li><%= link_to "Candidate Jobs", "/candidate_jobs" %></li>
+            <li><%= link_to "Candidates", candidates_url %></li>
+            <li><%= link_to "Clients", clients_url %></li>
+            <li><%= link_to "Jobs", "#{jobs_url}?view=list" %></li>
+            <li><%= link_to "Notes", notes_url %></li>
+            <li><%= link_to "Candidate Jobs", candidate_jobs_url %></li>
             <% if signed_in? %>
             <li><%= link_to "Sign Out", signout_url, method: 'delete' %></li>
             <% else %>
