Rename Company_id column To Agency_id in Recruiters table.

--- a/app/views/candidate_jobs/index.html.erb
+++ b/app/views/candidate_jobs/index.html.erb
@@ -1,30 +1,8 @@
-<h1>Candidate jobs</h1>
+<h2><%= @job.title %> </h2>
+<h2><%= @job.client_jobs.first.client.name %> </h2>
+<h4> Internal Job ID #<%= @job.id %> External Job ID #<%= @job.external_job.id %></h4>
 
-<p><%= link_to 'Add a New Candidate Job', new_candidate_job_url %></p>
+<h2>List of Candidates</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Candidate</th>
-      <th>Job</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-  <% @candidate_jobs.each do |candidate_job| %>
-    <tr>
-      <td><%= candidate_job.candidate.user.full_name %></td>
-      <td><%= candidate_job.job.try(:title) %></td>
-
-      <td><%= link_to 'Show', candidate_job_url(candidate_job) %></td>
-      <td><%= link_to 'Edit', edit_candidate_job_url(candidate_job) %></td>
-      <td><%= link_to 'Destroy', candidate_job_url(candidate_job), method: 'delete', data: { confirm: "Do you really want to delete this candidate_job?" } %></td>
-
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render 'candidates/candidate_list', candidates: @candidate_jobs %>
 
