--- a/app/views/recruiters/_form.html.erb
+++ b/app/views/recruiters/_form.html.erb
@@ -18,8 +18,13 @@
   </div>
 
   <div>
-    <%= f.label :company_id %><br />
-    <%= f.collection_select :company_id, Company.all, :id, :name %>
+    <%= f.label :agency_id %><br />
+    <%= f.collection_select :agency_id, Agency.all, :id, :name %>
+  </div>
+
+  <div>
+    <%= f.label :user_id %><br />
+    <%= f.collection_select :user_id, User.all, :id, :full_name %>
   </div>
 
   <div>
