--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -16,13 +16,13 @@
 </p>
 
 <p>
-  <b>Company:</b>
-  <%= @recruiter.company_id %>
+  <b>Agency:</b>
+  <%= @recruiter.agency.name %>
 </p>
 
 <p>
   <b>Email:</b>
-  <%= @recruiter.email %>
+  <%= @recruiter.user.email %>
 </p>
 
 
