--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,13 +1,8 @@
 
-
-  <b>First name:</b>
-  <%= @candidate.first_name %>
-
-
-
-  <b>Last name:</b>
-  <%= @candidate.last_name %>
-
+<p>
+  <b>Full name:</b>
+  <%= @candidate.user.full_name %>
+</p>
 
 <p>
   <b>Title:</b>
